# extended-position-based-dynamics-application

./: CMakeLists.txt  CMakePresets.json  README.md  default.frag  default.vert  ground.vert  imgui.ini  main  main.cpp
bunny/: bunny.1.edge  bunny.1.ele  bunny.1.face  bunny.1.mesh  bunny.1.neigh  bunny.1.node  bunny.1.smesh  bunny.ply
include/: Camera.h  ObjLoader.h
include/glad/: glad.h
include/imgui/: imgui_impl_glfw  imgui_impl_glfw.h
src/: ObjLoader.cpp  Texture.cpp  glad.c
teapot/: ascii_teapot.1.edge  ascii_teapot.1.ele  ascii_teapot.1.face  ascii_teapot.1.mesh  ascii_teapot.1.node  ascii_teapot.1.smesh  ascii_teapot.ply
